--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
 # VITE_REACT_APP_BASE_URL="http://localhost:9000"
-VITE_REACT_APP_BASE_URL="https://inventory-dailybazar-backend.vercel.app"
+VITE_REACT_APP_BASE_URL="https://ishop-jxk4.onrender.com"
